
Please add newer entries at the top, list the date and your name with
email address.

2008-Jan-21 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
	labels and texts display changed when rotated 180 degres:
	horizontal text are now right justified insteed of 180 degree rotated, and are readable.

2008-Jan-20 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
	On line DRC when creating a zone outline.
	Needs more work to display errors DRC.


2008-Jan-18 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
	filtering small mouse moves ( < 5 pixels) when clicking.
	Starting a wire or a track is now more easily because these small moves do not start a block commnad.
	
+pcbnew:
	rework of drill filles creation (excellon and reports)
	needed to have a clean implantation of buried vias and mainly microvia
	which involve a more complex drill files generation
	This is better to continue work on zones because :
	hight density boards = use of BGA = microvias + good zones handling
	When a board has buried or blind vias (microvia are blind vias),
	pcbnew creates a drill file per layer pair. for a 4 layer board:
	drill file for layer1 to layer 2
	drill file for layer2 to layer 3
	drill file for layer3 to layer 4



2008-Jan-18 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
    how-to-build-kicad.txt: added the Boost C++ Libraries installation info
    and requirement.


2008-Jan-16 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    Move Zone outlines added
    Zone outline DRC works (needs improvements)